css/style2.css
/* GENERAL */

*, *:before, *:after {
  box-sizing: border-box;
}

:root {
  --clr-top: #dffbff;
  --clr-main-heading: #658E6E;
  --clr-secondary-heading: #75A47C;
}

body {
  margin: 0;
}

figure {
  margin: 0;
}

h1 {
  color: var(--clr-main-heading);
}

h2 {
  color: var(--clr-secondary-heading);
}

main img {
  width: 10%;
}

/* TOP CONTAINER */

#top-container {
  background-color: var(--clr-top);
  height: 100vh;
  display: flex;
  flex-direction: column;
}

#top-container .cloud1 {
  max-width: 12em;
  position: absolute;
  top: 9vh;
  left: -200px;
  animation: wind 40s 15s linear infinite;
  opacity: .9;
  user-select: none;
}

#top-container .cloud2 {
  max-width: 12em;
  position: absolute;
  top: 9vh;
  left: -200px;
  animation: wind 40s 3s linear infinite;
  opacity: .9;
  user-select: none;
}

#top-container .cloud3 {
  max-width: 11em;
  position: absolute;
  top: 35vh;
  left: -200px;
  animation: wind 30s 10s linear infinite;
  opacity: .9;
  user-select: none;
}

#top-container .cloud4 {
  max-width: 11em;
  position: absolute;
  top: 35vh;
  left: -200px;
  animation: wind 30s linear infinite;
  opacity: .9;
  user-select: none;
}

@keyframes wind {
  from { left: -200px; }
  to { left: 100%; }
}

#top-container .mountain {
  max-width: 50em;
  display: block;
  position: absolute;
  left: 50%;
  bottom: 0;
  transform: translate3d(-50%, 0, 1px);
  user-select: none;
}

#top-container div {
  margin-top: 15vh;
  position: sticky;
  top: .5em;
}


/* MEDIA QUERY PE LANDSCAPE PE DISPLAYURI MICI */
/* 4K */
/* NORII PE TOATE DISPLAY-URILE */
/* REZOLVA PROBLEMA CU MUNTELE PE DISPLAYURI MICI */



#top-container h1 {
  text-align: center;
  font-family: 'Clicker Script', cursive;
  font-weight: 400;
  font-size: clamp(6rem, 6.5vw, 6.5rem);
  margin: 0;
  word-spacing: 10px;
  position: sticky;
  top: 0.5em;
}

#top-container span{
  font-size: clamp(7.1004rem, 9.0248vw, 9.0248rem);
}

#top-container h2 {
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-weight: 500;
  font-size: clamp(1.3rem, 1.5vw, 1.5rem);
  margin: 0;
}

@media screen and (max-width: 600px) {

  #top-container .cloud1 {
    max-width: 7em;
    margin-top: 11vh;
    animation: wind2 35s 20s linear infinite;
  }

  #top-container .cloud2 {
    max-width: 7em;
    margin-top: 11vh;
    animation: wind2 35s 3s linear infinite;
  }

  #top-container .cloud3 {
    max-width: 6em;
    margin-top: 18vh;
    animation: wind2 25s 12s linear infinite;
  }

  #top-container .cloud4 {
    max-width: 6em;
    margin-top: 18vh;
    animation: wind2 25s linear infinite;
  }

  @keyframes wind2 {
  from { left: -120px; }
  to { left: 100%; }
  }

  #top-container div {
    margin-top: 30vh;
    position: sticky;
    top: .2em;
  }

  #top-container h1 {
    font-size: 4.5rem;
    position: sticky;
    top: .2em;
  }

  #top-container span {
    font-size: 5.3253rem;
  }

  #top-container h2 {
    font-size: 1rem;
    font-weight: 600;
  }
}

